bot actions code reviewed

--- a/findly-builder/src/app/components/bot-action/bot-action.component.html
+++ b/findly-builder/src/app/components/bot-action/bot-action.component.html
@@ -3,13 +3,13 @@
     <mat-spinner diameter="18" strokeWidth="2"></mat-spinner>
     <span class="please-wait-message">Please Wait!</span>
   </div>
-  <!-- <div class="noTraits" *ngIf="!(bots && bots.length) && !loadingContent">
+  <div class="noTraits" *ngIf="!(bots && bots.length) && !loadingContent">
     <img class="noTraitsImg" src="assets/images/empty-illustration.png">
     <div class='noTraitsInfo'>
       <p class='infoP'>No actions available<br>
       </p>
     </div>
-  </div> -->
+  </div>
   <div class="table-list-content" *ngIf="!loadingContent">
     <div class="kr-sg-data-table with-checkbox">
       <div class="table-action-header">
