--- a/findly-builder/src/app/components/faq-source/faq-source.component.scss
+++ b/findly-builder/src/app/components/faq-source/faq-source.component.scss
@@ -540,7 +540,7 @@
                                 .desc-info{
                                     line-height: 21px;
                                     padding: 10px 0 20px 0;
-                                    border-bottom: 1px solid #E4E5E7;
+                                    // border-bottom: 1px solid #E4E5E7;
                                     &:last-child{
                                         border: 0;
                                         padding-bottom: 0;
