UI & functionality changes

--- a/findly-builder/src/app/components/annotool/components/pdf-annotation/pdf-annotation.component.html
+++ b/findly-builder/src/app/components/annotool/components/pdf-annotation/pdf-annotation.component.html
@@ -146,6 +146,10 @@
               </div>
             </div>
           </div>
+          <!-- <div class="indicator-container remove-indicator" *ngIf="overRectange" [style.left.px]="overRectange.left"
+            [style.top.px]="overRectange.top" (clickOutside)="overRectange =null;">
+            Remove Annotation
+          </div> -->
         </div>
         <!-- PDF VIEWER STARTS END -->
         <!-- PAGE NAVIGATION START -->
