--- a/findly-builder/src/app/components/content-source/content-source.component.scss
+++ b/findly-builder/src/app/components/content-source/content-source.component.scss
@@ -780,3 +780,6 @@
     .scroll-table{
         height: calc(100vh - 250px);
     }
+    .scroll-table-allowRow{
+        height: calc(100vh - 450px);
+    }
