--- a/findly-builder/src/app/components/content-source/content-source.component.html
+++ b/findly-builder/src/app/components/content-source/content-source.component.html
@@ -294,7 +294,7 @@
                     </section>
                   </div>
                 </div>
-                <perfect-scrollbar [disabled]="workflowService.disablePerfectScroll" class="scroll-table" >
+                
                
                 <div *ngIf="selectedSource.sitemaps"  class="site-map-url-sec">
                   <div class="label_text">Sitemap URLS</div>
@@ -316,6 +316,7 @@
                           <div class="slider"></div>
                         </label>
                       </div>
+                      <app-scheduler *ngIf="selectedSource.advanceSettings.scheduleOpts" [crwalObject] = "selectedSource" [schedule]="'get'"></app-scheduler>
                     </div>
                     <div class="row m-0 row_data">
                       <div class="col-10 title pl-pr-10">Crawl Everything</div>
@@ -331,7 +332,7 @@
                       </div>
                     </div>
                 </div>  
-                
+                <perfect-scrollbar [disabled]="workflowService.disablePerfectScroll" class="scroll-table-allowRow" >
                 <div *ngIf="selectedSource.advanceSettings && !selectedSource.advanceSettings.crawlEverything">
                   <div class="allow-list-data-label label_text">Allow List <img src="assets/icons/Info-small.svg" class="ml-1"></div>
                   <div class="allow-urls-sec row">
@@ -380,7 +381,6 @@
                     [disabled]="workflowService.disablePerfectScroll" class="scroll-table"
                     #perfectScroll
                     [scrollIndicators]="true"
-                    (psScrollY)="onListScroll()"
                    >
                   <div class="card_content"
                     *ngFor="let page of pagingData | filter: [ pagesSearch, 'url'];let i = index">
