--- a/findly-builder/src/app/components/faq-source/faq-source.component.html
+++ b/findly-builder/src/app/components/faq-source/faq-source.component.html
@@ -373,7 +373,7 @@
             </div>
         </div> 
     </div>
-    <div *ngIf="!(resources && resources.length)">
+    <div *ngIf="!(resources && resources.length)" class="empty-source-modal">
         <div class="empty-sources">
             <img src="assets/images/icons/empty_ill.svg">
             <div class="heading">No FAQ sources are available</div>
