--- a/findly-builder/src/app/components/faq-source/faq-source.component.scss
+++ b/findly-builder/src/app/components/faq-source/faq-source.component.scss
@@ -78,6 +78,9 @@
             .content{                
                 &.left-content{
                     width: 45%;
+                    .empty-questions-selected{
+                        height: calc(100vh - 306px);
+                    }
                 }
                 &.right-content{
                     width: 55%;
@@ -720,35 +723,37 @@
             }
         }         
     }
-    .empty-sources{
-        width: 320px;
-        margin: 0 auto;
-        // height: calc(100% - 60px);
-        text-align: center;
-        display: -webkit-box;
-        display: -ms-flexbox;
-        display: flex;
-        -webkit-box-orient: vertical;
-        -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-        flex-direction: column;                       
-        -webkit-box-pack: center;                       
-        -ms-flex-pack: center;                       
-        justify-content: center;   
-        height: calc(100% - 146px);
-        img{
-            width: 75%;
-            margin: 0 auto;
-        }     
-        .heading{
-            margin: 18px 0 8px 0;
-            color: $primaryColor;
+    .empty-source-modal{
+        height: 100%;
+        .empty-sources{
+            width: 320px;
+            margin: 0 auto;        
+            text-align: center;
+            display: -webkit-box;
+            display: -ms-flexbox;
+            display: flex;
+            -webkit-box-orient: vertical;
+            -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+            flex-direction: column;                       
+            -webkit-box-pack: center;                       
+            -ms-flex-pack: center;                       
+            justify-content: center;   
+            height: 100%;
+            img{
+                width: 75%;
+                margin: 0 auto;
+            }     
+            .heading{
+                margin: 18px 0 8px 0;
+                color: $primaryColor;
+            }
+            .desc{
+                color: $secondaryColor;
+                font-size: 14px;
+            }
         }
-        .desc{
-            color: $secondaryColor;
-            font-size: 14px;
-        }
-    } 
+    }     
     .source-modal-popup{
         padding: 20px 30px !important;
         height: calc(100vh - 70px);
