--- a/findly-builder/src/app/components/synonyms/synonyms.component.scss
+++ b/findly-builder/src/app/components/synonyms/synonyms.component.scss
@@ -263,4 +263,33 @@
 .table-scroll-perfect-synonyms{
     margin: 20px 0 0 0;
     height: calc(100vh - 276px);
+    .empty-questions-selected{
+        width: 320px;
+        margin: 0 auto;
+        // height: calc(100% - 60px);
+        text-align: center;
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+        flex-direction: column;                       
+        -webkit-box-pack: center;                       
+        -ms-flex-pack: center;                       
+        justify-content: center;   
+        height: calc(100vh - 290px);
+        img{
+            width: 75%;
+            margin: 0 auto;
+        }     
+        .heading{
+            margin: 18px 0 8px 0;
+            color: $primaryColor;
+        }
+        .desc{
+            color: $secondaryColor;
+            font-size: 14px;
+        }
+    }
  }
