Integrated Updated APIs for Linking/Unlinking Bot. Added Search Pipe for Filtering Linked Bot Sources. Reverted to Older CSS Styles in content-source Component. Added Conditional CSS Classes for Highlighting the Bot Linked.

--- a/findly-builder/src/app/components/add-source/add-source.component.scss
+++ b/findly-builder/src/app/components/add-source/add-source.component.scss
@@ -147,8 +147,8 @@
                     background-color: #fff;
                     text-align: left;
                     width: 80%;
-                    // left: 10%;
-                    // padding-left: 30px;
+                    left: 10%;
+                    padding-left: 30px;
                     box-shadow: inset 0px 1px 0px #BDC1C6;
                 }
             }
