--- a/findly-builder/src/app/components/add-faq/add-faq.component.scss
+++ b/findly-builder/src/app/components/add-faq/add-faq.component.scss
@@ -80,7 +80,81 @@
             right: 15px;
             cursor: pointer;
         }
-    }   
+    } 
+    .responseEditorContainer{
+        background: #F3F3F3;
+        border-radius: 5px;
+        .body-top-content{
+            padding: 20px 0 0 0;
+        }
+        .question-content{
+            .title-que{
+                color: #202124;
+                font-weight: 500;
+                font-size: 14px;
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+                span{
+                    display: inline-block;
+                    max-width: 100%;
+                    white-space: nowrap;
+                    overflow: hidden;
+                    text-overflow: ellipsis;
+                    padding-right: 10px;
+                }
+                img{
+                   cursor: pointer;
+                }
+            }
+            .keywords{
+                font-size: 12px;
+                color: #9AA0A6;
+                .key-title{
+    
+                }
+                .keys{
+                    padding: 0 0 0 8px;
+                }
+            }                            
+            .bot-response-title{
+                color: #9AA0A6;
+                font-weight: 500;
+                font-size: 12px;
+                text-transform: uppercase;
+                margin-bottom: 2px;
+                margin-top: 15px;
+            }
+            .condition-tags{
+                color: #9AA0A6;
+                font-weight: normal;
+                font-size: 12px;
+            }
+            .conditionalBlock{
+                color: #202124;
+                font-size: 14px;                                                                                              
+            }
+            .bot-response-view-mode{                                                              
+                .desc-info{
+                    line-height: 21px;
+                    padding: 10px 0 20px 0;
+                    // border-bottom: 1px solid #E4E5E7;
+                    &:last-child{
+                        border: 0;
+                        padding-bottom: 0;
+                    }
+                }
+                .img-view-mode{
+                    padding: 10px 0 20px 0;
+                    img{
+                        border-radius: 10px;
+                        width: 100%;
+                        // height: 200px;                                        
+                    }
+                }
+            }
+        } 
+    } 
     .text-area-editor{
         &.image-split-mode{
             display: flex;
